--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     buildToolsVersion "29.0.2"
     defaultConfig {
         applicationId "com.example.android_app"
-        minSdkVersion 15
+        minSdkVersion 20
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -46,6 +46,6 @@ dependencies {
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.2"
 
     implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.12.1'
-
+    implementation "com.afollestad.material-dialogs:core:3.1.0"
 
 }
